<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/asse_x"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/asse_y"
            android:textSize="20sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/asse_z"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#7A7A7A" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp" >

        <TextView
            android:id="@+id/x_axis"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/y_axis"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/z_axis"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingTop="8dp" >

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="startRecord"
            android:text="@string/start" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="pauseRecord"
            android:text="@string/pause" />

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="stopRecord"
            android:text="@string/stop" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/show_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_message"
            android:textSize="18sp" />
    </ScrollView>

</LinearLayout>