<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:id="@+id/index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:paddingLeft="5dp"
            android:text="@string/name_h1"
            android:textColor="#7a7a7a"
            android:textSize="14sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/date_h1"
            android:textColor="#7a7a7a"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:id="@+id/index_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#7a7a7a" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/empty_db"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_db"
                android:textSize="18sp"
                android:visibility="gone"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>